2008-10-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Pavel Zeldin <pzeldin at gmail dot com>

	* ext/pango/gstclockoverlay.c: (gst_clock_overlay_render_time),
	(gst_clock_overlay_class_init), (gst_clock_overlay_finalize),
	(gst_clock_overlay_init), (gst_clock_overlay_set_property),
	(gst_clock_overlay_get_property):
	* ext/pango/gstclockoverlay.h:
	API: Add ability to specify format for date/time display by
	adding a "time-format" property.
	Fixes bug #554879.

2008-10-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Jan Gerber <j at oil21 dot org>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps):
	Add FFV1 fourcc to support playback of FFMPEG lossless video
	in AVI. Fixes bug #555319.

2008-10-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Håvard Graff <havard dot graff at tandberg dot com>

	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create):
	Implement skew clock slaving. Fixes #552559.

2008-10-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/multichannel.c:
	* gst-libs/gst/audio/testchannels.c:
	Fix include of config.h

2008-10-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on Patch by: Tero Saarni <tero dot saarni at gmail dot com>

	* gst-libs/gst/sdp/gstsdpmessage.c: (gst_sdp_parse_line),
	(print_media), (gst_sdp_message_dump):
	Fix parsing of the c= field containing multicast addresses.
	Fixes #552199.
	Add the connection info to the session or streams.
	Fix parsing of the bandwidth.
	Add debugging for the connections and bandwidths for a media.
	Add debugging for the bandwidth of the session. 

2008-10-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_change_state):
	Configure the next seqnum and timestamp in the state change so that they
	can be queried soon after.

2008-10-06  Wim Taymans  <wim.taymans@collabora.co.uk>
